@@ -1,3 +1,4 @@
+* Add scheduled task to update cached feeds
 
 Version 7.2.0 - 2024-04-29
 --------------------------
